add more flags again